# capstonemo

./: .htaccess  README.md  ad  admins  build.bat  build.sh  manage.py  ponte  pyproject.toml  renaf  renaf.pub  render.yaml  requirements.txt
coreapp/: backend.py  forms.py  models.py  urls.py  views.py
coreapp/migrations/: 0001_initial.py  0002_payment_status_alter_booked_approval_status_and_more.py  0002_unit_alter_admin_id.py  0002_unit_alter_admin_id_tenants.py  0003_alter_admin_uname.py  0003_alter_tenants_groups_alter_tenants_user_permissions.py  0003_tenant.py  0004_booked_image_alter_admin_uname.py  0004_delete_tenant.py  0004_delete_tenants.py  0005_alter_admin_pword_alter_admin_uname.py  0005_tenants.py  0006_alter_tenants_options_alter_tenants_managers_and_more.py  0006_auto_20231127_1500.py  0007_alter_tenants_groups_alter_tenants_user_permissions.py  0007_alter_tenants_tent_pword_alter_tenants_tent_uname.py  0008_alter_tenants_tent_uname.py  0008_auto_20231130_1903.py  0008_auto_20231130_2329.py  0008_booked_mop_booked_ref_alter_payment_amount.py  0009_delete_tenants.py  0009_payment_unitid_alter_booked_ref_and_more.py  0010_alter_payment_unitid.py  0010_tenants.py  0011_alter_booked_ref.py  0011_merge_0004_delete_tenants_0010_tenants.py  0012_remove_payment_unitid_payment_units.py  0012_tenants.py  0013_tenantaccs_delete_tenants.py  0013_units_total_sales.py  0014_remove_booked_date_booked_chek_in_booked_chek_out.py  (+31 more)
corepro/: asgi.py  settings.py  urls.py  wsgi.py
myvenv/: pyvenv.cfg
povenv/: pyvenv.cfg
staticfiles/: staticfiles.json
(+50 files in other folders)
